mejorando planilla :rocket:

--- a/prueba.html
+++ b/prueba.html
@@ -13,6 +13,7 @@
         <label for="legajo">Legajo</label>
         <input type="radio" id="sap" name="legajo" value="Sap">
         <label for="SAP">SAP</label>
+        <textarea name="asd" id="asd" cols="30" rows="10"></textarea>
         <button type="submit">ASD</button>
     </form>
 </body>
