Cambios: :coffee: pasar index.html a formulario :coffee: cambiar index.css a form.css :smiley: agregar index.html :smiley: agregar style.css

--- a/public/index.html
+++ b/public/index.html
@@ -4,69 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
-    <script src="/js/formulario.js" defer></script>
-    <title>Formulario</title>
+    <title>Página de Inicio</title>
 </head>
 <body>
-    <main>
-        <form action="/public/inscripcion.html" id="form" target="_blank">
-            <fieldset id="datos-personales">
-                <label for="fname">Nombre:</label>
-                <input type="text" id="fname" name="fname">
-                <label for="lname">Apellido:</label>
-                <input type="text" id="lname" name="lname">
-                <label for="bday">Fecha de nacimiento:</label>
-                <input type="date" id="bday" name="bday">
-                <label for="bdom">Lugar de Nacimiento:</label>
-                <input type="text" id="bdom" name="bdom">
-                <label for="dni">DNI:</label>
-                <input type="text" id="dni" name="dni">
-                <label for="cuit">CUIT o CUIL:</label>
-                <input type="text" id="cuit" name="cuit">
-                <fieldset class="legajo">
-                    <input type="radio" id="legajo" name="legajo" value="Legajo">
-                    <label for="legajo">Legajo</label>
-                    <input type="radio" id="sap" name="legajo" value="SAP">
-                    <label for="SAP">SAP</label>
-                </fieldset>
-                <input type="text" id="leg" name="leg">
-                <label for="matricula">Matrícula:</label>
-                <input type="text" id="matricula" name="matricula">
-                <label for="cel">Celular:</label>
-                <input type="tel" id="cel" name="cel">
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email">
-            </fieldset>
-            <fieldset class="domicilio-particular">
-                <label for="dom-p">Domicilio Particular:</label>
-                <input type="text" id="dom-p" name="dom-p">
-                <label for="codp-p">Código Postal:</label>
-                <input type="text" id="codp-p" name="codp-p">
-                <label for="loc-p">Localidad:</label>
-                <input type="text" id="loc-p" name="loc-p">
-                <label for="tel-p">Teléfono:</label>
-                <input type="tel" id="tel-p" name="tel-p">
-            </fieldset>
-            <fieldset class="domicilio-laboral">
-                <label for="dom-l">Domicilio Laboral:</label>
-                <input type="text" id="dom-l" name="dom-l">
-                <label for="codp-l">Código Postal:</label>
-                <input type="text" id="codp-l" name="codp-l">
-                <label for="loc-l">Localidad:</label>
-                <input type="text" id="loc-l" name="loc-l">
-                <label for="tel-l">Teléfono:</label>
-                <input type="tel" id="tel-l" name="tel-l">
-            </fieldset>
-            <fieldset>
-                <label for="serv">Presta servicio como:</label>
-                <textarea type="text" id="serv" name="serv" rows="4" cols="50"></textarea>
-                <label for="serv-en">En:</label>
-                <input type="tel" id="serv-en" name="serv-en">
-            </fieldset>
-                <input type="submit" value="Submit"> 
-        </form>
-
-    </main>
+    <head></head>
+    <nav></nav>
+    <main></main>
+    <footer></footer>
 </body>
 </html>
