:coffee: Mejorando el formulario para que no salga de la página

--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -7,8 +7,8 @@
     <title>Página de Inicio</title>
 </head>
 <body>
-    <head></head>
-    <nav></nav>
+    <head class="header"></head>
+    <nav class="navbar"></nav>
     <main></main>
     <footer></footer>
 </body>
