--- a/public/pages/formulario.html
+++ b/public/pages/formulario.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/form.css">
-    <script src="/js/formulario.js" defer></script>
+    <link rel="stylesheet" href="../css/form.css">
+    <script src="../js/formulario.js" defer></script>
     <title>Formulario</title>
 </head>
 <body>
