--- a/public/pages/inscripcion.html
+++ b/public/pages/inscripcion.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="/js/inscripcion.js" defer></script>
-    <link rel="stylesheet" href="./css/form.css">
+    <script src="../js/inscripcion.js" defer></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js" integrity="sha512-GsLlZN/3F2ErC5ifS5QtgpiJtWd43JWSuIgh7mbzZ8zBps+dvLusV+eNQATqgA/HdeKFVgA5v3S/cIrLF7QnIg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <link rel="stylesheet" href="../css/form.css">
+    <script src="../js/html2pdf.js" defer></script>
     <title>Document</title>
 </head>
 <body>
@@ -84,5 +85,5 @@
     </div>
     </main>
 </body>
-<script src="../js/html2pdf.js"></script>
+
 </html>
