Presentando diseño de Inicio :artying_face: :coffee: mejorando scss

--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -1,18 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/pages/inicio.css">
     <title>Página de Inicio</title>
 </head>
+
 <body>
+    <nav id="nav-g">
+        <img id="logo" src="../src/img/logo (1).png" alt="">
+        <a href="">Inicio</a>
+        <a href="">Afiliación</a>
+        <a href="">Beneficios</a>
+        <a href="">Capacitación</a>
+        <a href="">Noticias</a>
+        <a href="">Nosotros</a>
+        <a href="">Contacto</a>
+        <div class="redes">    
+            <img src="../src/img/Redes/facebook.svg" alt="">
+            <img src="../src/img/Redes/twitter.svg" alt="">
+        </div>
+        <img src="../src/img/cgt_logo.png" alt="">
+
+    </nav>
     <header id="header-g">
-        <!-- <img id="logo" src="../src/img/headerAppamia.jpg" alt=""> -->
+        <img id="logo" src="../src/img/headerAppamia2.jpg" alt="">
     </header>
-    <nav></nav>
-    <main></main>
-    <footer></footer>
+    <main>
+        <div class="noticias">
+            <h1>Ultimas Noticias</h1>
+            <article>
+                <img src="../src/img/Noticias/287325902_397260822419061_4894927302583079029_n.jpg" alt="">
+                <h2>DÍA MUNDIAL DE TOMA DE CONCIENCIA DEL ABUSO Y MALTRATO A LA VEJEZ</h2>
+                <p>
+                    Hoy, como cada 15 de junio, se conmemora el “Día Mundial de Toma de Conciencia del Abuso y Maltrato en la Vejez”
+                </p>
+            </article>
+            <article>
+                <img src="../src/img/Noticias/287325902_397260822419061_4894927302583079029_n.jpg" alt="">
+                <h2>DÍA MUNDIAL DE TOMA DE CONCIENCIA DEL ABUSO Y MALTRATO A LA VEJEZ</h2>
+                <p>
+                    Hoy, como cada 15 de junio, se conmemora el “Día Mundial de Toma de Conciencia del Abuso y Maltrato en la Vejez”
+                </p>
+            </article>
+            <article>
+                <img src="../src/img/Noticias/287325902_397260822419061_4894927302583079029_n.jpg" alt="">
+                <h2>DÍA MUNDIAL DE TOMA DE CONCIENCIA DEL ABUSO Y MALTRATO A LA VEJEZ</h2>
+                <p>
+                    Hoy, como cada 15 de junio, se conmemora el “Día Mundial de Toma de Conciencia del Abuso y Maltrato en la Vejez”
+                </p>
+            </article>
+            <article>
+                <img src="../src/img/Noticias/287325902_397260822419061_4894927302583079029_n.jpg" alt="">
+                <h2>DÍA MUNDIAL DE TOMA DE CONCIENCIA DEL ABUSO Y MALTRATO A LA VEJEZ</h2>
+                <p>
+                    Hoy, como cada 15 de junio, se conmemora el “Día Mundial de Toma de Conciencia del Abuso y Maltrato en la Vejez”
+                </p>
+            </article>
+            <article>
+                <img src="../src/img/Noticias/287325902_397260822419061_4894927302583079029_n.jpg" alt="">
+                <h2>DÍA MUNDIAL DE TOMA DE CONCIENCIA DEL ABUSO Y MALTRATO A LA VEJEZ</h2>
+                <p>
+                    Hoy, como cada 15 de junio, se conmemora el “Día Mundial de Toma de Conciencia del Abuso y Maltrato en la Vejez”
+                </p>
+            </article>
+            <article>
+                <img src="../src/img/Noticias/287325902_397260822419061_4894927302583079029_n.jpg" alt="">
+                <h2>DÍA MUNDIAL DE TOMA DE CONCIENCIA DEL ABUSO Y MALTRATO A LA VEJEZ</h2>
+                <p>
+                    Hoy, como cada 15 de junio, se conmemora el “Día Mundial de Toma de Conciencia del Abuso y Maltrato en la Vejez”
+                </p>
+            </article>
+            <article>
+                <img src="../src/img/Noticias/287325902_397260822419061_4894927302583079029_n.jpg" alt="">
+                <h2>DÍA MUNDIAL DE TOMA DE CONCIENCIA DEL ABUSO Y MALTRATO A LA VEJEZ</h2>
+                <p>
+                    Hoy, como cada 15 de junio, se conmemora el “Día Mundial de Toma de Conciencia del Abuso y Maltrato en la Vejez”
+                </p>
+            </article>
+        </div>
+        <aside>
+            <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fappamia&tabs=timeline&width=340&height=500&small_header=true&adapt_container_width=true&hide_cover=true&show_facepile=true&appId" width="340" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+            <a href="https://mutualappamia.org/mutual/">
+                <img src="../src/img/muppamia.jpg" alt="">
+            </a>
+        </aside>
+    </main>
+    <footer id="footer-g">
+        <div class="titulo">
+            <img id="logo" src="../src/img/logo (1).png" alt="">
+            <h3>ASOCIACIÓN DE PROFESIONALES DEL PROGRAMA </h3>
+            <h3>DE ATENCIÓN  MÉDICA INTEGRAL Y AFINES </h3>
+            <h6>Personería Gremial Nº 1383 </h6>
+        </div>
+        <div class="datos">
+            <img src="../src/img/Footer/mail.png" alt=""><p>appamia@speedy.com.ar </p>
+            <img src="../src/img/Footer/telefono.png" alt=""><p>Tel/Fax 4861-0009<br/>líneas rotativas </p>
+            <a href="https://goo.gl/maps/fxRi2BKH4kur1GBd9" target="_blank"><img src="../src/img/Footer/map.png" alt=""></a><p>Av. Belgrano 3569 (1210) Capital Federal </p>            
+        </div>
+    </footer>
 </body>
+
 </html>
