Mejora a Scss y el index :rocket:

--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -13,7 +13,7 @@
     <nav id="nav-g">
         <img id="logo" src="../src/img/logo (1).png" alt="">
         <a href="">Inicio</a>
-        <a href="">Afiliación</a>
+        <a href="afiliacion.html">Afiliación</a>
         <a href="">Beneficios</a>
         <a href="">Capacitación</a>
         <a href="">Noticias</a>
@@ -30,7 +30,7 @@
         <img id="logo" src="../src/img/headerAppamia2.jpg" alt="">
     </header>
     <main>
-        <div class="noticias">
+        <div id="noticias">
             <h1>Ultimas Noticias</h1>
             <article>
                 <img src="../src/img/Noticias/287325902_397260822419061_4894927302583079029_n.jpg" alt="">
