--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -6,29 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/pages/inicio.css">
+    <script src="../js/layout.js" defer></script>
     <title>Página de Inicio</title>
 </head>
 
 <body>
-    <nav id="nav-g">
-        <img id="logo" src="../src/img/logo (1).png" alt="">
-        <a href="">Inicio</a>
-        <a href="afiliacion.html">Afiliación</a>
-        <a href="">Beneficios</a>
-        <a href="">Capacitación</a>
-        <a href="">Noticias</a>
-        <a href="">Nosotros</a>
-        <a href="">Contacto</a>
-        <div class="redes">    
-            <img src="../src/img/Redes/facebook.svg" alt="">
-            <img src="../src/img/Redes/twitter.svg" alt="">
-        </div>
-        <img src="../src/img/cgt_logo.png" alt="">
-
-    </nav>
-    <header id="header-g">
-        <img id="logo" src="../src/img/headerAppamia2.jpg" alt="">
-    </header>
+    <nav id="nav-g"></nav>
+    <header id="header-g"> </header>
     <main>
         <div id="noticias">
             <h1>Ultimas Noticias</h1>
@@ -89,19 +73,7 @@
             </a>
         </aside>
     </main>
-    <footer id="footer-g">
-        <div class="titulo">
-            <img id="logo" src="../src/img/logo (1).png" alt="">
-            <h3>ASOCIACIÓN DE PROFESIONALES DEL PROGRAMA </h3>
-            <h3>DE ATENCIÓN  MÉDICA INTEGRAL Y AFINES </h3>
-            <h6>Personería Gremial Nº 1383 </h6>
-        </div>
-        <div class="datos">
-            <img src="../src/img/Footer/mail.png" alt=""><p>appamia@speedy.com.ar </p>
-            <img src="../src/img/Footer/telefono.png" alt=""><p>Tel/Fax 4861-0009<br/>líneas rotativas </p>
-            <a href="https://goo.gl/maps/fxRi2BKH4kur1GBd9" target="_blank"><img src="../src/img/Footer/map.png" alt=""></a><p>Av. Belgrano 3569 (1210) Capital Federal </p>            
-        </div>
-    </footer>
+    <footer id="footer-g"></footer>
 </body>
 
 </html>
