Mejorando layout y empezando página de afiliación

--- a/public/pages/afiliacion.html
+++ b/public/pages/afiliacion.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/form.css">
+    <link rel="stylesheet" href="../css/pages/afiliacion.css">
     <script src="../js/formulario.js" defer></script>
+    <script src="../js/layout.js" defer></script>
     <title>Formulario</title>
 </head>
 <body>
+    <nav id="nav-g"></nav>
+    <header id="header-g"> </header>
     <main>
+
         <form action="/public/inscripcion.html" id="form" target="_blank">
             <fieldset id="datos-personales">
                 <label for="fname">Nombre:</label>
@@ -68,5 +72,6 @@
         </form>
 
     </main>
+    <footer id="footer-g"></footer>
 </body>
 </html>
