Haciendo cambios en afiliación antes de unit formulario e inscripción js

--- a/public/pages/nosotros.html
+++ b/public/pages/nosotros.html
@@ -191,7 +191,7 @@
                             </div>
                             <div>
                                 <img src="../src/img/Directivos/nestor_manzanelli.png" alt="">
-                                <h4>Dr.Nestor Amilcar Manzarelli</h4>
+                                <h4>Dr.Nestor Amilcar Mazzarelli</h4>
                                 <p>Secretario Hacienda y Finanzas</p>
                             </div>
                             <div>
@@ -262,22 +262,73 @@
                     </div>
                 </div>
             </div>
-            <div class="secretarias accordeon">
-                <button type="button" class="accordion__button">SECRETARIAS</button>
-                <div class="accordion__content">
-
-                </div>
-            </div>
             <div class="delegaciones accordeon">
                 <button type="button" class="accordion__button">DELEGACIONES</button>
                 <div class="accordion__content">
-
+                    <p>DISTRITO CAPITAL FEDERAL – DELEGACION VI</p>
+                    <p>DISTRITO APPAMIA UNIDAD ASISTENCIAL CESAR MILSTEIN – DELEGACION VI</p>
+                    <p>DISTRITO CONURBANO NORESTE – DELEGACION VIII</p>
+                    <p>DISTRITO CONURBANO NOROESTE – DELEGACION VIII</p>
+                    <p>DISTRITO CONURBANO OESTE – DELEGACION XXIX</p>
+                    <p>DISTRITO CONURBANO MERLO – DELEGACION XXIX</p>
+                    <p>DISTRITO CONURBANO MORENO – DELEGACION XXIX</p>
+                    <p>DISTRITO LA MATANZA – DELEGACION XXXV</p>
+                    <p>CONURBANO SUDESTE  QUILMES – DELEGACION XXXVII</p>
+                    <p>CONURBANO SUDESTE BERAZATEGUI – DELEGACION XXXVII</p>
+                    <p>CONURBANO SUDOESTE – DELEGACION X</p>
+                    <p>CONURBANO LA PLATA – BERISSO – ENSENADA – DELEGACION VII</p>
+                    <p>DISTRITO TANDIL - BAHÍA BLANCA – MAR DEL PLATA - DELEGACION XI</p>
+                    <p>DISTRITO CÓRDOBA – DELEGACION III</p>
+                    <p>DISTRITO GUALEGUAYCHÚ = PROVINCIA DE ENTRE RÍOS – DELEGACION XIV</p>
+                    <p>DISTRITO ROSARIO – DELEGACION IX</p>
+                    <p>DISTRITO ROSARIO  POLICLINICOS – SANTA FE - DELEGACION IX</p>
+                    <p>DISTRITO RECONQUISTA - PROVINCIA DE SANTA FÉ – DELEGACION XV</p>
+                    <p>DISTRITO SANTA FÉ NORESTE – DELEGACION XV</p>
+                    <p>DISTRITO SANTA FÉ NOROESTE -  DELEGACION XV</p>
+                    <p>DISTRITO CHACO – DELEGACION XIII</p>
+                    <p>DISTRITO  LA PAMPA – DELEGACION XX</p>
+                    <p>DISTRITO MENDOZA CENTRO  – DELEGACION IV</p>
+                    <p>DISTRITO MENDOZA SAN MARTIN ESTE  – DELEGACION IV</p>
+                    <p>DISTRITO MENDOZA SAN RAFAEL – DELEGACION IV</p>
+                    <p>DISTRITO TUCUMAN – DELEGACION I</p>
+                    <p>DISTRITO CHUBUT – DELEGACION XVII</p>
+                    <p>DELEGACION CALL CENTER – DELEGACION VI</p>
+                    <p>DELEGACION D.A.M.N.PyP. VI</p>
+                    <p>DELEGACION D.A.M.N.PyP. VIII</p>
+                    <p>DELEGACION D.A.M.N.PyP. X</p>
+                    <p>DELEGACION D.A.M.N.PyP. XXIX</p>
                 </div>
             </div>
             <div class="gremiales accordeon">
                 <button type="button" class="accordion__button">GREMIALES</button>
                 <div class="accordion__content">
-
+                            <h2>Paritarias</h2>
+                            <p>Nuestra asociación posee la representacion exclusiva de todos los Profesionales de la Salud en cuanto a modalidades y condiciones de trabajo, dentro del marco del Convenio Colectivo de Trabajo 697/05E del INSSJP.</p>
+                            <p> Comisiones Paritarias constituyen el ámbito de resolución de todas las cuestiones referentes a la aplicación de las normativas vigentes dentro del marco de la Ley de Contrato de Trabajo en General y de cada convenio especifico en particular. APPAMIA posee Personeria Gremial nro. 1383 con ámbito de aplicación a nivel Nacional.</p>
+                            <br><br>
+                            <h2>El significado del 1º de Mayo para los profesionales de la salud</h2>
+                            <p>Los sindicatos argentinos son plenamente conscientes de que en este 2012 se esta viviendo una etapa histórica y decisiva para este país, saben que el camino mas seguro para defender los intereses de sus afiliados es luchar por la igualdad y empleo para todos, lo que deberá ser implementado de una vez por todas y donde se garanticen todas las obligaciones y derechos que el trabajador y las patronales tienen y que están contenidas en la ley de contrato de trabajo.</p>
+                            <p>Los sindicatos se han revalorado positivamente, por haber apoyado el esfuerzo para superar los efectos sociales y laborales devastadores provocados por la crisis de 2001 y por haber sabido sustentar en mejoras progresivas los salarios y condiciones de trabajo de los/las asalariadas y que se traduce en la plena vigencia de los Convenios Colectivos de Trabajo y las Paritarias salariales.</p>
+                            <p>Cuando celebramos la fecha del 1º de Mayo, debemos tener siempre en cuenta que esa fecha hunde sus raíces en la fundación de la Argentina moderna. La celebración forma parte de la evolución política y socio laboral del país desde 1890. Aquel 1º de Mayo de 1890 se realizó por primera vez una gran concentración obrera.</p>
+                            <p>El comportamiento estatal entre 1890 y 1930 osciló entre la represión y la tolerancia limitada.</p>
+                            <p>Durante los años treinta o " Década Infame", en un contexto que se volvía favorable para los sindicatos por el inicio de industrialización y la formación de la sociedad industrial, los actos del 1º de mayo debieron hacerse en locales cerrados o realizarse con fuertes medidas de seguridad para impedir la represión conservadora.</p>
+                            <p>A partir de 1945, con el estímulo del gobierno militar instalado con la Revolución nacionalista (1943), y especialmente por el liderazgo entonces coronel Juan Domingo Perón, el 1º de Mayo pasa a ser una fecha de reivindicación y efectivización de los derechos de los trabajadores.</p>
+                            <p>A partir del golpe de Estado liberal conservadora de 1955 y hasta 1973 los actos del 1º de Mayo fueron siempre actos de oposición político-laboral, algunos precariamente legales, otros directamente realizados clandestinamente.</p>
+                            <p>Entre 1973 y 1976, en años de gran convulsión política, los 1º de Mayo fueron actos de afirmación de los derechos de los trabajadores.</p>
+                            <p>La dictadura militar (1976-1983) prohibió los actos obreros y peronistas los 1Â° de mayo como parte de su estrategia de dividir, controlar y reprimir a los sindicatos únicos.</p>
+                            <p>El colapso de la dictadura militar y la instalación de la democracia política plena en 1983 y 1989 nuevamente permitieron la realización de actos públicos, entre ellos los del 1º de Mayo.</p>
+                            <p>Pero como eran años en los que la democracia política era "incompleta", puesto que se pretendía limitarla a lo político, excluyendo las dimensiones sociales y económicas, fueron actos de resistencia al liberalismo económico y de reclamo de regreso a un nacionalismo industrialista actualizado y funcional a la necesidad de incorporar al país a la segunda ola de mundialización de la economía, pero preservando la estructura industrial y los valores de la sociedad salarial.</p>
+                            <p>Con la llegada al poder del menemismo en 1899 y su inicialmente atrayente doble discurso fundado en el proyecto de "revolución productiva" y "salariazo", el movimiento sindical se enfrentó a la disyuntiva de apoyar o resistir.</p>
+                            <p>La confusión paralizó al sindicalismo durante varios años. Hasta que en 1997, pese a la reelección de Menem (1995), las mayoría de los sindicatos vieron claramente que el programa basado en la convertibilidad y la reforma económica era un programa neoliberal y conservador, destinado a convertir al país en una factoría exportadora controlada por el capitalismo financiero rentístico que solo podía funcionar con destrucción del empleo registrado y con un modelo laboral basado en la flexibilización, el empleo precario y la desocupación.</p>
+                            <p>Nuevamente, los actos, reuniones y manifiestos del 1º de Mayo se fueron poco a poco trasformando en manifestaciones de oposición al dúo gobernante Menem-Cavallo.</p>
+                            <p>Recién en el año 2003, en medio de las consecuencias de la crisis global provocada por los sucesos de 2001 llega al gobierno el peronismo-kirchnerismo. Se inicia un viraje nacionalista-neodesarrollista con eje en la recuperación de la capacidad adquisitiva de los trabajadores. El movimiento obrero es reconocido nuevamente desde el Estado como una fuerza fundamental para asegurar el éxito de las negociaciones salariales tripartitas impulsadas exitosamente desde el Ministerio de Trabajo, Empleo y Seguridad Social (MTESS).</p>
+                            <p>La formación de estos cuadros de bases firmes y constituidos por expertos en cada área, son los que permitirán a los trabajadores tener en el mediano plazo su propia representatividad legislativa y por ende mas fuerza política.</p>
+                            <p>Los profesionales de la salud no estamos fuera de ese contexto, al contrario se nos ha llamado a participar activamente en este plan de desarrollo y lo hemos aceptado</p>
+                            <p>Este 1 de mayo para nosotros los profesionales de la salud es especial, ya que estamos en plena actividad y concientización de nuestro valor dentro del estrato trabajador y por ende empezamos a ocupar el espacio que nunca se nos dio.</p>
+                            <p>APPAMIA como entidad gremial de primer grado que nuclea a todos los profesionales de la salud esta inmersa en este proceso de transformación, por eso también para nosotros es un día especial.</p>
+                            <p>APPAMIA felicita a todos los profesionales de la salud en su día y les augura un futuro de unión y reivindicación de sus derechos laborales.</p>
+                            <p>CONSEJO DIRECTIVO</p>
+                            <br>
                 </div>
             </div>
             <div class="legislacion accordeon">
